k8s-config/ingress-nexus-registry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-registry
  namespace: nexus
spec:
  type: ClusterIP
  ports:
  - name: registry
    port: 5000
    targetPort: 5000
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nexus-registry
  namespace: nexus
subsets:
- addresses:
  - ip: 172.30.2.117
  ports:
  - port: 5000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-registry-ingress
  namespace: nexus
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/group.name: nexus-registry
    alb.ingress.kubernetes.io/load-balancer-name: __NEXUS_ALB_NAME__
    alb.ingress.kubernetes.io/certificate-arn: __NEXUS_CERT_ARN__
    alb.ingress.kubernetes.io/healthcheck-path: /v2/
    alb.ingress.kubernetes.io/success-codes: "200,401"
spec:
  ingressClassName: alb
  rules:
  - host: __NEXUS_DOMAIN__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-registry
            port:
              number: 5000
