k8s-config/ingress-nexus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nexus
  namespace: nexus
subsets:
- addresses:
  - ip: 172.30.2.117
  ports:
  - port: 8081
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/group.name: platform
    alb.ingress.kubernetes.io/load-balancer-name: __ALB_NAME__
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: "200-499"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/nexus
        pathType: Prefix
        backend:
          service:
            name: nexus
            port:
              number: 8081
