k8s-config/ingress-vault.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8200
    targetPort: 8200
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vault
  namespace: vault
subsets:
- addresses:
  - ip: 172.30.2.117
  ports:
  - port: 8200
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/group.name: platform
    alb.ingress.kubernetes.io/load-balancer-name: __ALB_NAME__
    alb.ingress.kubernetes.io/healthcheck-path: /v1/sys/health
    alb.ingress.kubernetes.io/success-codes: "200-499"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/vault
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
