k8s-config/platform-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: argocd
spec:
  type: ExternalName
  externalName: sonarqube-sonarqube.sonarqube.svc.cluster.local
  ports:
  - name: http
    port: 9000
    targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-name: __ALB_NAME__
    alb.ingress.kubernetes.io/success-codes: "200-499"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: healthz
            port:
              number: 80
      - path: /api/argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      - path: /api/sonarqube
        pathType: Prefix
        backend:
          service:
            name: sonarqube
            port:
              number: 9000
