k8s-config/sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-name: __ALB_NAME__
    alb.ingress.kubernetes.io/group.name: platform
    alb.ingress.kubernetes.io/success-codes: "200-499"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/sonarqube
        pathType: Prefix
        backend:
          service:
            name: sonarqube-sonarqube
            port:
              number: 9000
